--- a/GhasreMobile/Views/Forum/ForumView.cshtml
+++ b/GhasreMobile/Views/Forum/ForumView.cshtml
@@ -1,6 +1,6 @@
-﻿@model VmTopic
+﻿@model TblTopic
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = " تالار گفتگو- " + Model.Title;
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["TopicId"] = Model.TopicId;
 }
@@ -14,18 +14,23 @@
 @section Aside{
 
   
-    @await Component.InvokeAsync("AdView") 
+@await Component.InvokeAsync("AdView") 
 @await Component.InvokeAsync("AdView")
 }
 
 <nav class="breadcrumb uk-padding-remove">
-    <a href="">تالار گفتگو</a>
-    <a href="" class="active">صفحه اصلی</a>
+    <a href="/Forum">تالار گفتگو</a>
+    <a href="/" class="active">صفحه اصلی</a>
 </nav>
 
 <div class="forum-block">
-    <form asp-action="SubmitComment" asp-controller="Forum" class="content">
-        <input type="text" asp-for="TopicId" style="display: none" value="@Model.TopicId" />
+    <form  id="ajaxresultSendCommentTopic" class="content" action="/Forum/SendComment" method="post"
+          data-ajax="true"
+          data-ajax-method="POST"
+          data-ajax-mode="replace"
+          data-ajax-complete="SendCommentTopic()"
+          data-ajax-update="#ajaxresultSendCommentTopic">
+        <input type="hidden" asp-for="TopicId" value="@Model.TopicId" />
         <div class="rowr">
             <h5>@Model.Title</h5>
             <div class="rowr uk-margin-auto-right">
@@ -38,13 +43,13 @@
                 @Model.Body
             </p>
             <div class="fg-col uk-margin-medium-top">
-                <textarea name="comment" id="Comment" class="entry" placeholder="نظر شما..."></textarea>
+                <textarea name="Body" id="Body"  class="entry" placeholder="نظر شما..." required></textarea>
             </div>
         </div>
         <div class="action uk-margin-small-top">
             <span class="row uk-margin-auto-top">
                 <span uk-icon="ratio:.8;icon:chatbox-ellipses-outline"></span>
-                <span> @Model.Comments.Count </span>
+                <span> @Model.TblTopicCommentRel.Where(i=>i.Comment.IsValid).ToList().Count </span>
             </span>
             <a class="link-text  uk-margin-auto-top" href="" uk-icon="ratio:.8;icon:arrow-redo-outline"></a>
             <button class="btn btn-dashed uk-margin-auto-top uk-margin-auto-left">ثبت نظر</button>
@@ -62,50 +67,26 @@
 <div class="comment-section mat-card">
     <h3 class="uk-margin-bottom">نظرات کاربران</h3>
     <ul>
-        <li>
-            <partial name="_RepliableComment" />
-        </li>
-        <li>
-            <partial name="_RepliableComment" />
-        </li>
-        <li>
-            <partial name="_RepliableComment" />
-        </li>
+        @foreach (var item in Model.TblTopicCommentRel.Where(i => i.Comment.IsValid))
+        {
+            <li>
+                <partial name="_RepliableComment" model="item.Comment" />
+            </li>
+        }
     </ul>
 </div>
 
-<!-- Modal Reply -->
-<div id="ModalReply" uk-modal>
-    <form class="form uk-modal-dialog uk-modal-body">
-        <h3 class="uk-margin-bottom">
-            پاسخ
-        </h3>
-        @*  آیدی کامنتی که بهش پاسخ داریم میدیم رو موقع واز کردن مودال پاس میدم اینتو  *@
-        <input type="hidden" name="ParentId" id="CommentId" />
-        <div class="fg-col">
-            <div class="fg-label">متن پاسخ</div>
-            <textarea class="entry"></textarea>
-            <span class="text-danger"></span>
-        </div>
-        <div class="actions">
-            <button class="btn btn-primary">ثبت</button>
-        </div>
-    </form>
-</div>
+
 @section Scripts{
     <script src="~/js/BjaxLib.js"></script>
 
     <script>
-        function reply(commentId) {
-            // آیدی کامنتی که بهش پاسخ داریم میدیم رو میزارم تو یه اینپوت
-            const input = document.getElementById('CommentId');
-            input.value = commentId;
 
-            UIkit.modal(document.getElementById('ModalReply')).show();
+        function SendCommentTopic() {
+            $("textarea").val("");
+            UIkit.notification('پیام شما ثبت شد');
+            LoadingEnd();
         }
-    </script>
-
-    <script>
 
         function VoteUp(val) {
             var result = Bjax("/Forum/VoteUp?id=", val, "SP");
