--- a/GhasreMobile/wwwroot/css/Controls.scss
+++ b/GhasreMobile/wwwroot/css/Controls.scss
@@ -2062,3 +2062,8 @@ div[role=none][id] {
         border-left: 4px $primary solid;
     }
 }
+
+.anchor-within-page {
+    position: absolute;
+    margin-top: -1 * ($nav-header-height + 18px);
+}
