--- a/GhasreMobile/wwwroot/css/uikit.css
+++ b/GhasreMobile/wwwroot/css/uikit.css
@@ -8011,6 +8011,9 @@ iframe.uk-cover {
 .uk-display-inline-block {
   display: inline-block !important; }
 
+.uk-display-none {
+  display: none !important; }
+
 /* Inline
  ========================================================================== */
 /*
