--- a/GhasreMobile/wwwroot/css/uikit.scss
+++ b/GhasreMobile/wwwroot/css/uikit.scss
@@ -8742,6 +8742,10 @@ iframe.uk-cover {
 .uk-display-inline-block {
     display: inline-block !important;
 }
+
+.uk-display-none {
+    display: none !important;
+}
 /* Inline
  ========================================================================== */
 /*
