--- a/GhasreMobile/Areas/Admin/Views/Catagory/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Catagory/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="col-md-12 flex-div pb-3 pt-3">
         <div class="card flex-div border-0 main-shadow">
             <div class="card-header bg-white">
-                <div class="pr-1 pt-2">
+                <div class=" pt-2">
                     <div class="form-group pb-0 mb-0">
                         <button id="Create" data-toggle="modal" data-target="#modalSave" class="btn btn-success btn-sm">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
                     </div>
