--- a/GhasreMobile/Areas/Admin/Views/Store/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Store/Components/Edit.cshtml
@@ -57,7 +57,7 @@
     <input type="hidden" asp-for="Lon" />
     <span class="text-danger" asp-validation-for="Lat"></span>
     <div class="modal-footer justify-content-end">
-        <button type="submit" class="btn btn-success btn-sm text-white">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
+        <button type="submit" class="btn btn-success btn-sm text-white">ویرایش<span class="icon-holder uk-margin-small-right" uk-icon="create-outline"></span></button>
     </div>
 </form>
 
