--- a/GhasreMobile/Areas/Admin/Views/Card/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Card/Components/Create.cshtml
@@ -17,7 +17,7 @@
         <div class="form-row">
             <div class="form-group col-lg-6">
                 <label>شماره کارت</label>
-                <input asp-for="AccountNo" type="number" class="form-control form-control-sm" placeholder="مثال: 1234567891234">
+                <input asp-for="AccountNo" type="number" class="form-control form-control-sm" placeholder="مثال: ...6037">
                 <span class="text-danger" asp-validation-for="AccountNo"></span>
             </div>
             <div class="form-group col-lg-6">
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group col-lg-6">
                 <label>نام بانک</label>
-                <input asp-for="BankName" type="text" class="form-control form-control-sm" placeholder="مثال: علی علیزاده">
+                <input asp-for="BankName" type="text" class="form-control form-control-sm" placeholder="مثال: بانک ملی">
                 <span class="text-danger" asp-validation-for="BankName"></span>
             </div>
         </div>
