--- a/GhasreMobile/Areas/Admin/Views/Slider/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Slider/Components/Create.cshtml
@@ -16,7 +16,7 @@
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>نام</label>
-                <input class="form-control form-control-sm" asp-for="Name" placeholder="مثال: سامسونگ">
+                <input class="form-control form-control-sm" asp-for="Name" placeholder="مثال: اسلایدر1">
                 <span class="text-danger" asp-validation-for="Name"></span>
             </div>
             <div class="form-group col-md-4">
@@ -27,7 +27,7 @@
         <div class="form-row">
             <div class="form-group col-md-7">
                 <label>افزودن لینک</label>
-                <input class="form-control form-control-sm" asp-for="Link" placeholder="https://...">
+                <input class="form-control form-control-sm" asp-for="Link" placeholder="...//:https">
                 <span class="text-danger" asp-validation-for="Link"></span>
             </div>
         </div>
