--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -60,6 +60,14 @@
                                         <span class="title">کارت بانکی</span>
                                     </a>
                                 </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/Config" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="cog"></i>                                           
+                                        </span>
+                                        <span class="title">تنظیمات سایت</span>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item active">
