--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                                 <li class="nav-item active">
                                     <a href="/Admin/Config" class="LoadingDiv">
                                         <span class="icon-holder">
-                                            <i uk-icon="cog"></i>                                           
+                                            <i uk-icon="cog"></i>
                                         </span>
                                         <span class="title">تنظیمات سایت</span>
                                     </a>
@@ -175,6 +175,14 @@
                                     <i uk-icon="chatbubble-ellipses"></i>
                                 </span>
                                 <span class="title">نظرات</span>
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="/Admin/Bank" class="LoadingDiv">
+                                <span class="icon-holder">
+                                    <i uk-icon="business"></i>                                    
+                                </span>
+                                <span class="title">بانک</span>
                             </a>
                         </li>
 
