--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -51,11 +51,11 @@
                                     <td>
                                         @if (item.PriceAfterDiscount == 0)
                                         {
-                                            <span>@item.PriceBeforeDiscount.Value.ToString("#,0 ريال")</span>
+                                            <span>@item.PriceBeforeDiscount.Value.ToString("#,0 تومان")</span>
                                         }
                                         else
                                         {
-                                            <span class="text-danger">@item.PriceAfterDiscount.Value.ToString("#,0 ريال") تخفیف دار</span>
+                                            <span class="text-danger">@item.PriceAfterDiscount.Value.ToString("#,0 تومان") تخفیف دار</span>
                                         }
                                     </td>
                                     <td>@item.DateCreated.Value.AllToShamsi()</td>
@@ -69,7 +69,7 @@
                                         else
                                         {
                                             <span class="text-danger" data-placement="top" data-toggle="tooltip" title="" data-original-title="به پیشنهاد ویژه">
-                                                @item.TblSpecialOffer.First().Discount% تا تاریخ @item.TblSpecialOffer.First().ValidTill
+                                                @item.TblSpecialOffer.First().Discount% تا تاریخ @item.TblSpecialOffer.First().ValidTill.AllToShamsi()
                                             </span>
                                         }
                                     </td>
