--- a/GhasreMobile/Views/Shared/Components/SpecialOfferViem/SpecialOfferViem.cshtml
+++ b/GhasreMobile/Views/Shared/Components/SpecialOfferViem/SpecialOfferViem.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TblSpecialOffer
 
-@if (Model != null)
+@if (Model.Product != null)
 {
     <partial name="_ExpressProductBlock" model="Model" />
 }
