--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -438,26 +438,17 @@
 
 
         function alertWhenReady(id) {
-            $.get("/Product/AlertWhenReady/" + id , function (res) {
+            $.ajax({
+                url: '/Product/AlertWhenReady/',
+                data: { id: id },
+            }).done(function (result) {
                 if (result == "true") {
                     UIkit.notification('بعد از موجود شدن محصول اطلاع رسانی خواهد شد');
                 }
                 else {
                     UIkit.notification('شما در صف اطلاع رسانی قرار دارید');
                 }
-            });
-
-            //$.ajax({
-            //    url: '/Product/AlertWhenReady/',
-            //    data: { id: id },
-            //}).done(function (result) {
-            //    if (result == "true") {
-            //        UIkit.notification('بعد از موجود شدن محصول اطلاع رسانی خواهد شد');
-            //    }
-            //    else {
-            //        UIkit.notification('شما در صف اطلاع رسانی قرار دارید');
-            //    }
-            //})
+            })
         }
 
         function commandOrder(id, count) {
