--- a/GhasreMobile/Views/Affiliate/Index.cshtml
+++ b/GhasreMobile/Views/Affiliate/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TblStore>
+﻿@model TblConfig
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -13,37 +13,13 @@
 
 @section Aside{
 
-    <div swap="swAffiliates" class="affiliates mat mat-border col">
-        <div class="mat-pad uk-padding-remove-bottom">
-            <h3 class="uk-margin-remove uk-padding-remove">
-                شعب ما
-            </h3>
-        </div>
-        <ul>
-            @foreach (var item in Model)
-            {
-                <li>
-                    <a href="/StoreView/@item.StoreId/@item.Name.Replace(" ","-")">
-                        <h4>
-                            @item.Name
-                        </h4>
-                        <label>@item.Address</label>
-                        <div class="tel">
-                            <span uk-icon="call-outline">@item.TellNo</span>
-                        </div>
-                    </a>
-                </li>
-
-            }
-        </ul>
-    </div>
-
+    @await Component.InvokeAsync("StoreView")
 }
 
 
 <nav class="breadcrumb uk-padding-remove">
-    <a href="">شعب ما</a>
-    <a href="" class="active">نقشه شعبه ها</a>
+    <a href="#">شعب ما</a>
+    <a href="#" class="active">نقشه شعبه ها</a>
 </nav>
 
 <div class="map-main mat">
@@ -51,24 +27,18 @@
 
     </div>
     <div class="mat-pad">
-        <h3>
-            شعب ما
-        </h3>
-        <p>
-            لورم ایپسوم یا طرح‌نما (به انگلیسی: Lorem ipsum) به متنی آزمایشی و بی‌معنی در صنعت چاپ، صفحه‌آرایی و طراحی گرافیک گفته می‌شود. طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد. معمولا طراحان گرافیک برای صفحه‌آرایی، نخست از متن‌های آزمایشی و بی‌معنی استفاده می‌کنند تا صرفا به مشتری یا صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است. از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.
-        </p>
+        @Html.Raw(Model.Value)
     </div>
 </div>
 
 <div id="swAffiliates" role="none"></div>
-
 
 @section Scripts{
 
     <script src="~/js/leaflet.js"></script>
 
     <script>
-        var map = L.map('map').setView([38.07674409597339, 46.29700302496196], 12);
+        var map = L.map('map').setView([38.07674409597339, 46.29700302496196], 10);
 
         L.tileLayer('https://a.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
@@ -82,26 +52,28 @@
 
         var customIcon = new iconSetting({ iconUrl: '/marker.svg' });
 
-        var theMarker = {};
+        for (var i = 0; i < $("mymap").length; i++) {
+            var theMarker = {};
 
-        theMarker = L.marker(
-            [38.07674409597339, 46.29700302496196],
-            { icon: customIcon }
-        )
-            .addTo(map).bindPopup(
-                `
-                    <div class="aff-marker">
-                        <h4>شعبه شهناز</h4>
-                        <p>
-                            این یک آدرس می باش. آدرس یک شعبه که در هحله سضناز قرار دارد. این متن برای تست و به صورت کاملا آربیتری نوشته شده است
-                        </p>
-                        <a href="" dir="rtl">
-                            مشاهده
-                        </a>
-                    </div>
+            theMarker = L.marker(
+                [$("mymap lat")[i].innerHTML, $("mymap lon")[i].innerHTML],
+                { icon: customIcon }
+            )
+                .addTo(map).bindPopup(
                     `
-            ).openPopup();
+                                        <div class="aff-marker">
+                                            <h4>${$('mymap name')[i].innerHTML}</h4>
+                                            <p>
+                ${$('mymap address')[i].innerHTML}
+                                            </p>
+                                            <a href="/StoreView/${$("mymap storeid")[i].innerHTML}/${$("mymap name")[i].innerHTML}" dir="rtl">
+                                                مشاهده
+                                            </a>
+                                        </div>
+                                        `
+                );
 
+        }
     </script>
 
 
