--- a/GhasreMobile/Views/Home/About.cshtml
+++ b/GhasreMobile/Views/Home/About.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model TblConfig
 @{
     ViewData["Title"] = "Index";
     ViewData["Single"] = true;
@@ -12,12 +12,5 @@
 }
 
 <div class="mat-card">
-    @* Content *@
-    <h3>
-        درباره ما
-    </h3>
-    <p>
-        نخست از متن‌های آزمایشی و بی‌معنی استفاده می‌کنند تا صرفا به مشتری یا صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است. از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.
-    </p>
-
+    @Html.Raw(Model.Value)
 </div>
