--- a/GhasreMobile/Views/Product/Index.cshtml
+++ b/GhasreMobile/Views/Product/Index.cshtml
@@ -215,7 +215,7 @@
     <h3 dir="rtl">جزئیات فنی</h3>
     <table dir="rtl">
         <tbody>
-            @foreach (var item in Model.TblProductPropertyRel)
+            @foreach (var item in Model.TblProductPropertyRel.Where(i => i.Value != null))
             {
                 @if (item.Value != null)
                 {
@@ -264,10 +264,11 @@
     <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
 
 </div>
-<input type="text" class="hidden" name="ProductId" id="ProductId" value="@Model.ProductId" />
+<input type="hidden" class="hidden" name="ProductId" id="ProductId" value="@Model.ProductId" />
 @section Scripts{
 
     <script>
+
         //var id = $('#brandName').val();
         //$.get('/Product/SliderInProduct/' + id, function (result) {
         //    $('#listProductsSlider').html(result);
