--- a/GhasreMobile/Areas/User/Views/Order/Finalize.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/Finalize.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<ShopCartItemVm>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "تایید خرید";
     ViewData["Single"] = true;
     ViewData["NoNav"] = true;
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
