--- a/GhasreMobile/Areas/User/Views/Order/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "سابقه خرید";
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
