--- a/GhasreMobile/Areas/Admin/Views/Ad/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Ad/Components/Edit.cshtml
@@ -13,6 +13,7 @@
       data-ajax-mode="replace"
       data-ajax-complete="EndCatagoryCreate()"
       data-ajax-update="#ajaxresult">
+    <input type="hidden" asp-for="AdId" />
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-3">
