--- a/GhasreMobile/Areas/Admin/Views/Config/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Config/Index.cshtml
@@ -41,8 +41,12 @@
                         <textarea asp-for="DarbareyeMa" class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="..."></textarea>
                         <br /><span class="text-danger" asp-validation-for="DarbareyeMa"></span>
                     </div>
+                    <div class="form-group col-lg-12 mt-lg-3">
+                        <label>توضیحات شعب:</label>
+                        <textarea asp-for="StoreDescription" class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="..."></textarea>
+                        <br /><span class="text-danger" asp-validation-for="StoreDescription"></span>
+                    </div>
                     <button type="submit" class="btn btn-success btn-sm text-white">ثبت تغییرات<span class="icon-holder uk-margin-small-right" uk-icon="create-outline"></span></button>
-
                 </form>
             </div>
 
@@ -60,6 +64,7 @@
         $(function () {
             $('#TamasBaMa').ckeditor();
             $('#DarbareyeMa').ckeditor();
+            $('#StoreDescription').ckeditor();
         });
     </script>
     <script src="~/Validate/jquery.validate.min.js"></script>
