--- a/GhasreMobile/Areas/Admin/Views/Discount/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Discount/Index.cshtml
@@ -34,7 +34,7 @@
                                     <td>@item.Name</td>
                                     <td>@item.ValidTill</td>
                                     <td>@item.Discount%</td>
-                                    <td>10</td>
+                                    <td>@item.Count</td>
                                     <td>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
                                             <a onclick="Edit(@item.DiscountId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
