--- a/GhasreMobile/Areas/Admin/Views/Album/Components/Show.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Album/Components/Show.cshtml
@@ -12,7 +12,7 @@
         @foreach (var item in Model.TblImage)
         {
             <div class="col-6 col-lg-3 col-md-4 mb-3">
-                <button id="DeleteImage(@item.ImageId,@Model.AlbumId)" class="bg-light dismissButton" uk-icon="close-outline"></button>
+                <button onclick="DeleteImage(@item.ImageId,@Model.AlbumId)" class="bg-light dismissButton" uk-icon="close-outline"></button>
                 <a class="d-inline" href="~/Images/ProductAlbum/@item.Image" target="_blank">
                     <img class="d-inline" src="/Images/ProductAlbum/@item.Image" width="250" height="250" alt="">
                 </a>
@@ -27,8 +27,6 @@
 
 <script>
     function DeleteImage(id) {
-        $.post("/Admin/Album/DeleteImage/" + id, function () {
-
-        });
+        $.post("/Admin/Album/DeleteImage/" + id);
     }
 </script>
