--- a/GhasreMobile/Areas/Admin/Views/Discount/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Discount/Components/Edit.cshtml
@@ -13,6 +13,8 @@
       data-ajax-mode="replace"
       data-ajax-complete="EndCatagoryCreate()"
       data-ajax-update="#ajaxresult">
+    <input type="hidden" asp-for="DiscountId" />
+    <input type="hidden" asp-for="ValidTill"/>
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-6 col-lg-3">
